[package]
name = "navigation"
version = "0.1.0"
authors = ["proninyaroslav <proninyaroslav@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
thiserror = "1.0.19"
nalgebra = "0.21.0"
min-max-heap = "1.3.0"
ordered-float = "1.0.2"

[dev-dependencies]
float-cmp = "0.8.0"
